service-b/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-jrojas
spec:
  finalizers:
  - kubernetes
  description: "Mi proyecto de OpenShift"
