service-b/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-calculadora
  namespace: singularity-curso
spec:
  replicas: 2
  selector:
    matchLabels:
      app: label-calculadora
  template:
    metadata:
      labels:
        app: label-calculadora
    spec:
      containers:
      - name: container-calculadora
        image: jrojas02/servicio-b-calculadora
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "200Mi"
            cpu: "200m"
---

apiVersion: v1
kind: Service
metadata:
  name: deployment-calculadora
  namespace: namespace-jrojas
spec:
  selector:
    app: label-calculadora
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
